<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="661dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackgroundLiUpdate"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/bntClear"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editListerDes" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView13"
                android:layout_width="@dimen/default_avatar_width"
                android:layout_height="@dimen/default_avatar_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/circular"
                app:srcCompat="@drawable/profile"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:srcCompat="@drawable/ic_baseline_add_circle_24" />

            <EditText
                android:id="@+id/edtListerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/main_line_gap"
                android:layout_marginRight="@dimen/layout_margin_right"
                android:hint="@string/edtListerName"
                android:textSize="@dimen/primary_text"
                app:layout_constraintTop_toBottomOf="@+id/imageView13"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/edtListerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/editListerEmail"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edtListerName"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/editListerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/editListerPhone"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edtListerEmail"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/editListerNic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/editListerNIC"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editListerPhone"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/editListerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/editListerAddress"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editListerNic"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="375dp" />

            <EditText
                android:id="@+id/editListerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/edtPassword"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editListerAddress"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/editListerRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/edtRePassword"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editListerPassword"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/editListerDes"
                android:layout_width="381dp"
                android:layout_height="76dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/editListerDes"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editListerRePassword" />

            <Button
                android:id="@+id/listerRegisBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/btnBlue"
                android:text="@string/btnSubmit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <View
        android:id="@+id/viewHeaderBackgroundLiUpdate"
        android:layout_width="410dp"
        android:layout_height="64dp"
        android:background="@color/dashboard_item_4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvTitleListerProfileUpdate"
        android:textAllCaps="true"
        android:textColor="@color/background"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/viewHeaderBackgroundLiUpdate"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

